syntax = "proto3";

package rivet.backend.pkg.game.namespace_list;

import "resources/legacy/proto/common.proto";

message Request {
	repeated rivet.common.Uuid game_ids = 1;
}

message Response {
	message Game {
		rivet.common.Uuid game_id = 1;
		repeated rivet.common.Uuid namespace_ids = 2;
	}

	repeated Game games = 1;
}
